--- a/themes/hugoplate/layouts/team/list.html
+++ b/themes/hugoplate/layouts/team/list.html
@@ -1,13 +1,16 @@
 {{ define "main" }}
-  <section class="section-sm pb-0">
+ <section class="section-sm pb-0">
     <div class="container">
       <div
         class="row border-border dark:border-darkmode-border justify-center border-b pb-14">
+
+        <!-- Features -->
+        {{ range $i, $e:= .Params.features }}
         <div class="lg:col-4 text-center">
-          {{ $image:= .Params.image }}
+          {{ $image:= .image }}
           {{ if $image }}
             {{ partial "image" (dict "Src" $image "Alt" .Title "Class" "mx-auto" "Size" "200x200") }}
-          {{ else if .Params.Email }}
+          {{ else if .email }}
             <img
               class="mx-auto"
               alt="{{ .Title }}"
@@ -15,12 +18,12 @@
               width="200"
               src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon" />
           {{ end }}
-          <h1 class="h3 mt-10">{{ .Title }}</h1>
+          <h1 class="h3 mt-10">{{ .title }}</h1>
           <div class="content mt-6">
-            {{ .Content }}
+            {{ .content }}
           </div>
           <ul class="social-icons ml-4 mt-10 text-center">
-            {{ range .Params.social }}
+            {{ range .social }}
               <li>
                 <a
                   href="{{ .link | safeURL }}"
@@ -33,6 +36,8 @@
             {{ end }}
           </ul>
         </div>
+        {{ end }}
+        <!-- /Features -->
       </div>
 
       <div class="row pb-16 pt-14">
