--- a/themes/hugoplate/layouts/_default/baseof.html
+++ b/themes/hugoplate/layouts/_default/baseof.html
@@ -27,7 +27,9 @@
           scaleMobile: 1.00,
           backgroundColor: 0xffffff,
           color1: 0x0,
-          color2: 0xf6f6f6
+          color2: 0xf6f6f6,
+          birdSize: 1.60,
+          quantity: 4.00
         })
       };
     </script>
