--- a/themes/hugoplate/layouts/about/list.html
+++ b/themes/hugoplate/layouts/about/list.html
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="row justify-center">
         <div class="md:col-10 lg:col-7 text-center">
-          {{ partial "image" (dict "Src" .Params.image "Alt" .Title "Class" "mx-auto mb-6") }}
+          {{ partial "image" (dict "Src" .Params.image "Alt" .Title "Class" "mx-auto mb-12") }}
           <h2 class="h3 mb-6">{{ .Title }}</h2>
-          <div class="content">{{ .Content }}</div>
+          <div class="content text-justify">{{ .Content }}</div>
         </div>
       </div>
     </div>
