--- a/themes/hugoplate/layouts/team/list.html
+++ b/themes/hugoplate/layouts/team/list.html
@@ -19,7 +19,7 @@
               src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon" />
           {{ end }}
           <h1 class="h3 mt-10">{{ .title }}</h1>
-          <div class="content mt-6">
+          <div class="content text-justify mt-6">
             {{ .content }}
           </div>
           <ul class="social-icons ml-4 mt-10 text-center">
